# calio-ai-calorie-tracker

./: .replit  CALSNAP_PROJECT_OVERVIEW.md  PRD.md  README.md  image_testing.md  package-lock.json  package.json  proxy.js  pyproject.toml  replit.md  start.sh  test_credentials.md
.agents/memory/: MEMORY.md  calsnap-auth-preview.md  calsnap-challenges.md  calsnap-image-storage.md  calsnap-proxy.md  calsnap-startup.md
.local/tasks/: dashboard-real-data.md  icon-system-web-fix.md  onboarding-units-dob-name.md  pixel-perfect-ui-redesign.md  ui-polish-skeletons.md
admin-panel/: app.js  index.html  style.css
attached_assets/: Pasted-Act-as-a-Senior-React-Native-Expo-SDK-54-FastAPI-Engine_1784542353486.txt  Pasted-The-attached-screenshot-is-the-single-source-of-truth-R_1784533505178.txt
backend/: .env  ai_service.py  auth.py  dev_auth.py  images.py  models.py  nutrition.py  recipes_catalog.py  requirements.txt  server.py  storage.py
backend/tests/: conftest.py  test_admin_endpoints.py  test_api_core_flows.py  test_challenge_refresh_flows.py  test_recipe_bookmark_persistence.py
design_references/: README.md
frontend/: .env  README.md  app.config.ts  app.json  metro.config.js  package-lock.json  package.json
frontend/app/: +html.tsx  _layout.tsx  barcode.tsx  challenges.tsx  comparison.tsx  fasting.tsx  index.tsx  more.tsx  onboarding.tsx  recipes.tsx  reminders.tsx  scan-result.tsx  shop.tsx  voice.tsx  weight.tsx
frontend/src/: api.ts  auth-context.tsx  food-visuals.ts  onboarding-context.tsx  theme.ts  (+3 more)
scripts/: post-merge.sh
tests/: check_image_type.py
(+62 files in other folders)
